--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 				<a href="https://help.github.com/articles/why-are-my-contributions-not-showing-up-on-my-profile">
 				Learn how we count contributions</a>.
 			</div>
-			<div class="contrib-legend text-gray" title="A summary of pull requests, issues opened, and commits to the default and gh-pages branches.">
+			<div class="contrib-legend text-gray">
 				Less
 				<ul class="legend">
 					<li style="background-color: #ebedf0"></li>
